# ffmpeg-debug-qp

./: .all-contributorsrc  .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile.alpine  LICENSE  Makefile  README.md  appveyor.yml  example-avgs.json  example-avgs.ldjson  example-mbdata.csv  example-mbdata.json  example.py  extract.py  ffmpeg_debug_qp.c  parse-qp-output.py  parse_qp_output.py  pyproject.toml  release.sh  setup.py
.github/workflows/: build.yml
examples/: example-avgs.csv  example-mbdata.ldjson
ffmpeg_debug_qp_parser/: __main__.py  parse_qp_output.py
src/ffmpeg_debug_qp_parser/: __init__.py  __main__.py  parse_qp_output.py
test/: expected_out.csv  expected_out.json  expected_out.ldjson  test.py
util/: build-ffmpeg.sh
